--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "ejs": "^2.5.7",
     "express": "~4.15.2",
     "express-validator": "^3.2.1",
+    "json2csv": "^3.11.1",
     "jwt-simple": "^0.5.1",
     "morgan": "~1.8.1",
     "mysql": "^2.14.1",
     "mysql2": "^1.4.1",
     "pug": "~2.0.0-beta11",
-    "sequelize": "^4.4.3",
+    "sequelize": "^4.7.3",
     "serve-favicon": "~2.4.2"
   }
 }
