--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "morgan": "~1.8.1",
     "mysql": "^2.14.1",
     "mysql2": "^1.4.1",
+    "nodemailer": "^4.1.0",
+    "pdfkit": "^0.8.3",
+    "pdfkitjs": "0.0.5",
     "pug": "~2.0.0-beta11",
     "sequelize": "^4.7.3",
     "serve-favicon": "~2.4.2"
